# polkadot-sdk-solochain-template

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build-release.yml  ci.yml  release.yml
docs/: KOD_CHAIN.md  TRADE_SYSTEM.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs  wallet.rs
pallets/block-reward/: Cargo.toml
pallets/block-reward/src/: inherent.rs  lib.rs
pallets/trade/: Cargo.toml
pallets/trade/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
website/: explorer.html  index.html
website/explorer-app/: explorer.html  main.js  package-lock.json  package.json  style.css  vite.config.js
