[package]
name = "kod-node"
version = "1.0.0"
description = "KOD Chain Node - Proof of Work Mining"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "kod-node"

[dependencies]
# Local
kod-runtime = { workspace = true }
pallet-block-reward = { workspace = true, features = ["std"] }

# Substrate client
sc-cli = { workspace = true, features = ["rocksdb"] }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true, features = ["rocksdb"] }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-pow = { workspace = true }
sc-client-api = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-offchain = { workspace = true }

# Substrate primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-genesis-builder = { workspace = true }

# FRAME RPC
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

# Note: frame-benchmarking-cli removed due to pallet-sudo std compilation issues
# Add back when needed for benchmarking

# Other
clap = { workspace = true, features = ["derive"] }
codec = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
directories = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1.37", features = ["time", "rt"] }

# Wallet generation
bip39 = "2.0"
chrono = "0.4"
dirs = "5.0"
getrandom = "0.2"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
    "kod-runtime/runtime-benchmarks",
]
try-runtime = [
    "kod-runtime/try-runtime",
]
