[package]
name = "kod-runtime"
version = "1.0.0"
description = "KOD Chain Runtime - Proof of Work"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }

# Substrate primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-storage = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }

# FRAME dependencies
frame-support = { workspace = true, features = ["experimental"] }
frame-system = { workspace = true }
frame-executive = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
pallet-balances = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Local pallets
pallet-block-reward = { workspace = true }
pallet-template = { workspace = true }

# Benchmarking (optional)
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "serde_json/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-pow/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-timestamp/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-genesis-builder/std",
    "sp-storage/std",
    "sp-offchain/std",
    "sp-session/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "frame-system-rpc-runtime-api/std",
    "frame-metadata-hash-extension/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-block-reward/std",
    "pallet-template/std",
    "substrate-wasm-builder",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-template/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-block-reward/try-runtime",
    "pallet-template/try-runtime",
]
